<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SGit</string>
    <string name="admob_id">a15216f9d8d07d3</string>
    <string name="inapp_billing_key"></string>
    <string name="default_text">Default Text</string>
    <string name="title_clone_repo">Clone Repository</string>
    <string name="preference_file_key">me.sheimi.sgit</string>

    <!-- action -->
    <string name="action_search">Search</string>
    <string name="action_clone">Clone</string>
    <string name="action_import_repo">Import Repository</string>
    <string name="action_git_profile">Git Profile</string>
    <string name="action_pull">Pull</string>
    <string name="action_delete">Delete</string>
    <string name="action_merge">Merge</string>
    <string name="action_push">Push</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage_private_key">Private Keys</string>
    <string name="action_add_private_key">Add Key</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_pay">Pay to Remove Ads</string>
    <string name="action_choose_language">Choose Language</string>
    <string name="action_diff">Diff</string>
    <string name="action_mode_diff">Diff</string>
    <string name="action_edit">Edit</string>
    <string name="action_commit">Commit</string>
    <string name="action_reset">Reset</string>
    <string name="action_new_file">New File</string>
    <string name="action_new_dir">New Directory</string>


    <!-- label msg -->
    <string name="label_remote_url">Remote URL</string>
    <string name="label_local_path">Local Path</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_clone">Clone</string>
    <string name="label_delete">Delete</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_new_file_name">New Filename</string>
    <string name="label_rename">Rename</string>
    <string name="label_send_feedback">Send Feedback</string>
    <string name="label_import">Import</string>
    <string name="label_push">Push</string>
    <string name="label_push_all">Push All</string>
    <string name="label_commit">Commit</string>
    <string name="label_create">Create</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_git_name">Name</string>
    <string name="label_git_email">Email</string>
    <string name="label_done">Done</string>

    <!-- for title -->
    <string name="title_activity_repo_detail">RepoDetailActivity</string>
    <string name="title_activity_import_repository">Import Repository</string>
    <string name="title_activity_view_file">File: </string>
    <string name="title_activity_commit_diff">Diff:   </string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="tab_files_label">Files</string>
    <string name="tab_commits_label">Commit</string>

    <!-- Dialog Msg -->
    <string name="dialog_choose_branch_title">Choose Branch</string>
    <string name="dialog_delete_repo_title">Delete Conformation</string>
    <string name="dialog_delete_repo_msg">Are you sure to delete this repository?</string>
    <string name="dialog_rename_key_title">Rename</string>
    <string name="dialog_choose_language_title">Choose Language</string>
    <string name="dialog_comfirm_import_repo_title">Import Repository</string>
    <string name="dialog_comfirm_import_repo_msg">Are you sure to import this repository?</string>
    <string name="dialog_set_local_repo_dialog">Set Local Path</string>
    <string name="dialog_merge_title">Choose Branch To Merge</string>
    <string name="dialog_merge_checkbox">Commit after merge</string>
    <string name="dialog_push_repo_title">Push Repo</string>
    <string name="dialog_push_repo_msg">Are you sure to push local changes?</string>
    <string name="dialog_commit_title">Commit Changes</string>
    <string name="dialog_commit_msg_hint">Commit message</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_file_delete_msg">Are you sure to delete this file or directory?</string>
    <string name="dialog_reset_commit_title">Reset Changes</string>
    <string name="dialog_reset_commit_msg">Are you sure to discard all the changes?</string>
    <string name="dialog_create_dir_title">New Directory</string>
    <string name="dialog_create_dir_hint">Directory Name</string>
    <string name="dialog_create_file_title">New File</string>
    <string name="dialog_create_file_hint">File Name</string>
    <string name="dialog_comfirm_checkout_commit_title">Confirm Checkout</string>
    <string name="dialog_comfirm_checkout_commit_msg">Checkout Branch</string>
    <string name="dialog_profile_git_profile_title">Git Profile</string>

    <!-- Others -->
    <string name="pull_msg_init">Pulling … </string>
    <string name="pull_left_init">0%</string>
    <string name="pull_right_init">0/0</string>
    <string name="push_msg_init">Pushing … </string>
    <string name="push_left_init">0%</string>
    <string name="push_right_init">0/0</string>
    <string name="title_activity_private_key_manage">Manage Private Keys</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_explore_file">Explore Files</string>


    <!-- toast msg -->
    <string name="toast_commit_success">Changes has been committed</string>
    <string name="toast_reset_success">Changes has been discarded</string>

    <string name="feedback_subject">Feedback</string>

    <string-array name="merge_ff_type">
        <item>Fast Forward</item>
        <item>Fast Forward Only</item>
        <item>No Fast Forward</item>
    </string-array>

</resources>
