<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_merge"
            android:title="@string/action_merge"
            android:icon="@drawable/ic_merge"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_pull"
            android:title="@string/action_pull"
            android:icon="@drawable/ic_download"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_push"
            android:title="@string/action_push"
            android:icon="@drawable/ic_push"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_diff"
            android:title="@string/action_diff"
            android:icon="@drawable/ic_file"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_commit"
            android:title="@string/action_commit"
            android:showAsAction="never"/>
    <item
            android:id="@+id/action_reset"
            android:title="@string/action_reset"
            android:showAsAction="never"/>
    <item
            android:id="@+id/action_new_file"
            android:title="@string/action_new_file"
            android:showAsAction="never"/>
    <item
            android:id="@+id/action_new_dir"
            android:title="@string/action_new_dir"
            android:showAsAction="never"/>
    <item
            android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_trash"
            android:showAsAction="ifRoom"/>
</menu>
