<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/action_search"
            android:showAsAction="always|collapseActionView"
            android:actionViewClass="com.actionbarsherlock.widget.SearchView"/>
    <item
            android:id="@+id/action_new"
            android:icon="@drawable/ic_content_new"
            android:title="@string/action_clone"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_import_repo"
            android:title="@string/action_import_repo"
            android:showAsAction="never"/>

    <item
            android:id="@+id/action_add_private_key"
            android:title="@string/action_manage_private_key"
            android:showAsAction="never"/>

    <item
            android:id="@+id/action_feedback"
            android:title="@string/action_feedback"
            android:showAsAction="never"/>

    <!--
    TODO settings will be added in next release
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"/>
    -->
</menu>
